--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "silverstripe/recipe-plugin": "^1.2",
         "silverstripe/recipe-cms": "4.2.1@stable",
         "silverstripe-themes/simple": "~3.2.0",
-        "symbiote/silverstripe-gridfieldextensions": "^3"
+        "symbiote/silverstripe-gridfieldextensions": "^3",
+        "squizlabs/php_codesniffer": "^3.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
