--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "silverstripe/recipe-cms": "4.2.1@stable",
         "silverstripe-themes/simple": "~3.2.0",
         "symbiote/silverstripe-gridfieldextensions": "^3",
-        "squizlabs/php_codesniffer": "^3.4"
+        "squizlabs/php_codesniffer": "^3.4",
+        "symbiote/silverstripe-memberprofiles": "~4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
