--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "squizlabs/php_codesniffer": "^3.4",
         "symbiote/silverstripe-memberprofiles": "~4.0",
         "leafo/lessphp": "^0.5.0",
-        "jasonlewis/resource-watcher": "^1.2"
+        "jasonlewis/resource-watcher": "^1.2",
+        "silverstripe/userforms": "^5.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
