--- a/app/_config/mysite.yml
+++ b/app/_config/mysite.yml
@@ -8,7 +8,7 @@ SilverStripe\Security\Member:
     - Streunerkatzen\CatMemberExtension
 SilverStripe\SiteConfig\SiteConfig:
   extensions:
-    - Streunerkatzen\FotoCollageExtension
+    - Streunerkatzen\HeaderConfigExtension
 SilverStripe\Assets\Image:
   extensions:
     - Streunerkatzen\GalleryImageExtension
