catform with status changes

--- a/app/_config/mysite.yml
+++ b/app/_config/mysite.yml
@@ -3,6 +3,11 @@ Name: myproject
 ---
 SilverStripe\Core\Manifest\ModuleManifest:
   project: app
+SilverStripe\UserForms\Model\Submission\SubmittedForm:
+  includes:
+    - SilverStripe\ORM\FieldType\DBEnum
+  extensions:
+    - Streunerkatzen\CatUserFormSubmissionExtension
 SilverStripe\Security\Member:
   extensions:
     - Streunerkatzen\CatMemberExtension
@@ -12,3 +17,6 @@ SilverStripe\SiteConfig\SiteConfig:
 SilverStripe\Assets\Image:
   extensions:
     - Streunerkatzen\GalleryImageExtension
+SilverStripe\UserForms\UserForm:
+  extensions:
+    - Streunerkatzen\UserDefinedFormExtension
