fixed catform setting, removed dangerous buttons

--- a/app/_config/mysite.yml
+++ b/app/_config/mysite.yml
@@ -15,6 +15,6 @@ SilverStripe\SiteConfig\SiteConfig:
 SilverStripe\Assets\Image:
   extensions:
     - Streunerkatzen\GalleryImageExtension
-SilverStripe\UserForms\UserForm:
+SilverStripe\UserForms\Model\UserDefinedForm:
   extensions:
     - Streunerkatzen\UserDefinedFormExtension
