--- a/app/_config/mysite.yml
+++ b/app/_config/mysite.yml
@@ -18,6 +18,14 @@ SilverStripe\Assets\Image:
 SilverStripe\UserForms\Model\UserDefinedForm:
   extensions:
     - Streunerkatzen\UserDefinedFormExtension
+SilverStripe\UserForms\Control\UserDefinedFormController:
+  extensions:
+    - Streunerkatzen\UserDefinedFormControllerExtension
 SilverStripe\UserForms\Model\EditableFormField\EditableOption:
   extension:
     - Streunerkatzen\EditableOptionExtension
+SilverStripe\Control\Email\Email:
+  admin_email:
+    noreply@streunerkatzen.org: 'Streunerkatzen Team'
+SilverStripe\Core\Injector\Injector:
+  Swift_Transport: Swift_SendmailTransport
