--- a/app/_config/routes.yml
+++ b/app/_config/routes.yml
@@ -5,3 +5,4 @@ After: framework/_config/routes#coreroutes
 SilverStripe\Control\Director:
   rules:
     'api//$Action': 'Streunerkatzen\ApiController'
+    'notifications//$Action': 'Streunerkatzen\NotificationController'
