--- a/app/_config/mysite.yml
+++ b/app/_config/mysite.yml
@@ -24,3 +24,6 @@ SilverStripe\UserForms\Control\UserDefinedFormController:
 SilverStripe\Control\Email\Email:
   admin_email:
     noreply@streunerkatzen.org: 'Streunerkatzen Team'
+SilverStripe\UserForms\Form\UserForm:
+  extensions:
+    - Streunerkatzen\UserFormExtension
