edit cat entries: prefill form fields
multiselect + upload field not working yet

--- a/app/_config/mysite.yml
+++ b/app/_config/mysite.yml
@@ -27,3 +27,6 @@ SilverStripe\UserForms\Model\EditableFormField\EditableOption:
 SilverStripe\Control\Email\Email:
   admin_email:
     noreply@streunerkatzen.org: 'Streunerkatzen Team'
+SilverStripe\UserForms\Form\UserForm:
+  extensions:
+    - Streunerkatzen\UserFormExtension
