backend menu changes
added direct link to submitted cat data + removed campaigns
fixes #69

--- a/app/_config/mysite.yml
+++ b/app/_config/mysite.yml
@@ -26,3 +26,6 @@ SilverStripe\Control\Email\Email:
     noreply@streunerkatzen.org: 'Streunerkatzen Team'
 SilverStripe\Core\Injector\Injector:
   Swift_Transport: Swift_SendmailTransport
+SilverStripe\Admin\LeftAndMain:
+  extensions:
+    - Streunerkatzen\CustomLeftAndMainExtension
