--- a/app/_config/mysite.yml
+++ b/app/_config/mysite.yml
@@ -18,6 +18,9 @@ SilverStripe\UserForms\Model\UserDefinedForm:
 SilverStripe\UserForms\Control\UserDefinedFormController:
   extensions:
     - Streunerkatzen\UserDefinedFormControllerExtension
+SilverStripe\UserForms\Model\EditableFormField\EditableOption:
+  extensions:
+    - Streunerkatzen\EditableOptionExtension
 SilverStripe\Control\Email\Email:
   admin_email:
     noreply@streunerkatzen.org: 'Streunerkatzen Team'
