more fixes, sidebar functional, configurable

--- a/app/_config/mysite.yml
+++ b/app/_config/mysite.yml
@@ -9,6 +9,7 @@ SilverStripe\UserForms\Model\Submission\SubmittedForm:
 SilverStripe\SiteConfig\SiteConfig:
   extensions:
     - Streunerkatzen\HeaderConfigExtension
+    - Streunerkatzen\SidebarConfigExtension
 SilverStripe\Assets\Image:
   extensions:
     - Streunerkatzen\GalleryImageExtension
