current year in footer, no form elements in sidebar

--- a/app/_config/elements.yml
+++ b/app/_config/elements.yml
@@ -4,3 +4,6 @@ Name: myelements
 Page:
   extensions:
     - DNADesign\Elemental\Extensions\ElementalPageExtension
+SilverStripe\SiteConfig\SiteConfig:
+  disallowed_elements:
+    - DNADesign\ElementalUserForms\Model\ElementForm
