fix cat form bug (no initial page)

--- a/app/_config/mysite.yml
+++ b/app/_config/mysite.yml
@@ -6,8 +6,6 @@ SilverStripe\Core\Manifest\ModuleManifest:
 SilverStripe\Core\Injector\Injector:
   Dynamic\FlexSlider\ORM\FlexSlider:
     class: Streunerkatzen\Extensions\FlexSliderExtension
-  SilverStripe\UserForms\Model\EditableFormField:
-    class: Streunerkatzen\Extensions\EditableFormFieldExtension
   SilverStripe\UserForms\Extension\UserFormFieldEditorExtension:
     class: Streunerkatzen\Extensions\CatUserFormFieldEditorExtension
 DNADesign\Elemental\Models\BaseElement:
@@ -17,3 +15,6 @@ SilverStripe\SiteConfig\SiteConfig:
   extensions:
     - Streunerkatzen\Extensions\HeaderConfigExtension
     - Streunerkatzen\Extensions\SidebarConfigExtension
+SilverStripe\UserForms\Model\EditableFormField:
+  extensions:
+    - Streunerkatzen\Extensions\EditableFormFieldExtension
