CMS Links, Cat Form, Cat submission handling basics
Removed Campaign Link, added Link for each cat form

Versioned Cat

Predefined Cat Form + Cat Form Fields

Approve, Reject + Restore Submissions

FedState Form Field

--- a/app/_config/forms.yml
+++ b/app/_config/forms.yml
@@ -3,3 +3,5 @@ Name: forms
 ---
 SilverStripe\SpamProtection\Extension\FormSpamProtectionExtension:
   default_spam_protector: Streunerkatzen\Forms\HoneyPotSpamProtector
+SilverStripe\UserForms\Model\UserDefinedForm:
+  upgrade_on_build: false
